--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
     <encoding>UTF-8</encoding>
     <scala.version>2.12.6</scala.version>
     <scala.compat.version>2.12</scala.compat.version>
+    <akka.version>2.6.0</akka.version>
     <spec2.version>4.2.0</spec2.version>
   </properties>
 
@@ -30,6 +31,20 @@
       <version>${scala.version}</version>
     </dependency>
     <dependency>
+      <groupId>com.typesafe.akka</groupId>
+      <artifactId>akka-actor-typed_${scala.compat.version}</artifactId>
+      <version>${akka.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>com.typesafe.akka</groupId>
+      <artifactId>akka-http_${scala.compat.version}</artifactId>
+      <version>10.1.10</version>
+    </dependency>
+    <dependency>
+      <groupId>com.typesafe.akka</groupId>
+      <artifactId>akka-stream_${scala.compat.version}</artifactId>
+      <version>${akka.version}</version>
+    </dependency>    <dependency>
       <groupId>gnu.getopt</groupId>
       <artifactId>java-getopt</artifactId>
       <version>1.0.13</version>
